[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnd-srd-sync"
version = "0.1.0"
description = "D&D SRD sync tools for importing data into a database."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "httpx>=0.27",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "rich>=13.7",
  "sqlalchemy>=2.0",
  "sqlmodel>=0.0.22",
  "tenacity>=8.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
